convert into handover package

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,9 +10,18 @@
   overflow: hidden;
 }
 
+.button_width {
+  width: 50%;
+  white-space: normal;
+  padding: 10px 20px;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
+  }
+  .button_width {
+    width: 80%;
   }
 }
 
