--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,11 +1,20 @@
 .features {
   display: flex;
-  align-items: center;
+  justify-content: space-around;
   padding: 2rem 0;
   width: 100%;
 }
 
+.buildContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 240px;
+  font-weight: bold;
+}
+
 .featureSvg {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
 }
