--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,22 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #3651d0;
+  --ifm-color-primary-dark: #2d46bf;
+  --ifm-color-primary-darker: #2a42b4;
+  --ifm-color-primary-darkest: #233795;
+  --ifm-color-primary-light: #4b63d5;
+  --ifm-color-primary-lighter: #566dd7;
+  --ifm-color-primary-lightest: #7688df;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #b9c3ff;
+  --ifm-color-primary-dark: #8d9dff;
+  --ifm-color-primary-darker: #778aff;
+  --ifm-color-primary-darkest: #3552ff;
+  --ifm-color-primary-light: #e5e9ff;
+  --ifm-color-primary-lighter: #fbfcff;
+  --ifm-color-primary-lightest: #ffffff;
 }
